// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with access, but without filters filters props 1`] = `
<div
  class="layout wrap align-center"
>
  <remediation-instructions-filters-list-stub
    closable="true"
    filters=""
  />
  <remediation-instructions-filters-list-stub
    closable="true"
    editable="true"
    filters=""
  />
  <span
    class="v-tooltip v-tooltip--bottom"
  >
    <!---->
  </span>
  <button
    class="mx-1 my-0 v-btn v-btn--icon v-btn--round theme--light v-size--default"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        assignment
      </i>
    </span>
  </button>
</div>
`;

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with custom props 1`] = `
<div
  class="layout wrap align-center"
>
  <remediation-instructions-filters-list-stub
    closable="true"
    filters="[object Object],[object Object]"
  />
  <remediation-instructions-filters-list-stub
    closable="true"
    editable="true"
    filters="[object Object],[object Object]"
  />
  <span
    class="v-tooltip v-tooltip--bottom"
  >
    <!---->
  </span>
  <button
    class="mx-1 my-0 v-btn v-btn--icon v-btn--round theme--light v-size--default"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light primary--text"
      >
        assignment
      </i>
    </span>
  </button>
</div>
`;

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with default props 1`] = `
<div
  class="layout wrap align-center"
>
  <remediation-instructions-filters-list-stub
    filters=""
  />
  <remediation-instructions-filters-list-stub
    filters=""
  />
  <!---->
</div>
`;

exports[`alarms-list-remediation-instructions-filters Renders \`alarms-list-remediation-instructions-filters\` with locked filters props 1`] = `
<div
  class="layout wrap align-center"
>
  <remediation-instructions-filters-list-stub
    filters="[object Object],[object Object]"
  />
  <remediation-instructions-filters-list-stub
    filters=""
  />
  <span
    class="v-tooltip v-tooltip--bottom"
  >
    <!---->
  </span>
  <button
    class="mx-1 my-0 v-btn v-btn--icon v-btn--round theme--light v-size--default"
    type="button"
  >
    <span
      class="v-btn__content"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light primary--text"
      >
        assignment
      </i>
    </span>
  </button>
</div>
`;
